Take withdrawal and deposit operation into consideration
