# Domains/Context/BankAccount/Domain/Model/Account/TransactionInfo.php
@@ -1,0 +1,13 @@
+<?php
+
+namespace Domains\Context\BankAccount\Domain\Model\Account;
+
+final class TransactionInfo
+{
+
+    public const DEPOSIT = 'Deposit';
+
+    public const WITHDRAWAL = 'Withdrawal';
+
+    public const BANKING_OPERATIONS = [self::DEPOSIT, self::WITHDRAWAL];
+}
